# Zyenyo

./: .classpath  .dockerignore  .gitignore  .project  Dockerfile  Procfile  README.md  botconfig.py  changelog.md  char_count_DB.json  docker-compose.prod.yaml  docker-compose.yaml  docker-compose.yml  index.py  init-letsencrypt.sh  pom.xml  pull.sh  pyproject.toml  requirements.txt  start.sh  startZyen.bat
.github/workflows/: maven.yml
ZBotData/: BottelGanger - general (1).zbsf  BottelGanger - general (2).zbsf  BottelGanger - general (4).zbsf  BottelGanger - general (5).zbsf  BottelGanger - typing (2).zbsf  BottelGanger - typing (8).zbsf  BottelGanger - zyen-testing (1).zbsf  COUNTS.zbif  IDs.zbif  The Democratic People's Republic of Tolgronar - bot-testing-chamber (1).zbsf  The Democratic People's Republic of Tolgronar - general (1).zbsf  activeTimeDB.json  cccopy.json  char_count_DB.json  osu! India - general (1).zbsf
ZBotData/GroupCC/: ZBA.json
ZBotData/TypingPrompts/: CharacterFrequencyMap.json  PromptRatingMap.zbo  SortedPromptsList.zbo  prompt1.txt  prompt10.txt  prompt11.txt  prompt12.txt  prompt13.txt  (+27 more)
ZyenyoBot/: [cog1]commands.py  __main__.py  botconfig.py  index.py  ping.py  startZyen.bat  typeconfig.py
nginx-docker/: Dockerfile  convert-nginx.sh  dev-nginx.conf  mime.types  nginx.conf  prod-nginx.conf
zyenyo-backend/: Cargo.toml  Dockerfile
zyenyo-backend/src/: main.rs  models.rs
zyenyo-backend/src/routes/: botstats.rs  mod.rs  prompts.rs
zyenyo-discord/: Dockerfile  pom.xml
zyenyo-frontend/: Dockerfile  package-lock.json  package.json
(+116 files in other folders)
