[package]
name = "zyenyo-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
mongodb = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
env_logger = "0.10.0"
actix-cors = "0.6.5"
