[package]
name = "zyenyo-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "zyenyo-backend"
path = "src/main.rs"

[dependencies]
actix-web = "4"
mongodb = "3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
env_logger = "0.10.0"
actix-cors = "0.6.5"
futures = "0.3.30"
